--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ matrix:
           - tools
           - android-29
           - build-tools-29.0.2
+      script:
+        - ./gradlew build
       before_script:
         - cd app/
 
