--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,13 @@
-matrix:
-  install: gradle wrapper --gradle-version 5.0.1
-  include:
-    - language: node_js
-      node_js:
-        - "10"
-      install:
-        - cd server/
-        - npm install
-      services:
-        - mongodb
-      script:
-        - travis_retry npm run lta
-        - npm run test
-
-    - language: android
-      dist: trusty
-      jdk: oraclejdk8
-      android:
-        components:
+#install: gradle wrapper --gradle-version 5.0.1
+language: android
+dist: trusty
+android:
+     components:
           - tools
           - android-29
           - build-tools-29.0.2
+      
       script:
+        - chmod +x gradlew
         - ./gradlew build
-      before_script:
-        - cd app/
 
-notifications:
-  email:
-    - berkeutkuonder@u.yale-nus.edu.sg
